--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -16,18 +16,26 @@
     "\n",
     "In the [Introductory Notebook](01-Introduction.ipynb), the first task was to open a web page from the Wayback Machine.  Suppose instead that you needed to find the homepage from [The News & Observer](https://www.newsobserver.com/) from November 11th, 2018.  One way to begin to create an algorithm for this process is to utilize \"The Seven Steps\" [1] (The following description is inspired by \"All of Programming\" by Drew Hilton and Anne Bracy.)\n",
     "\n",
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/sevensteps.png?raw=true)"
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/sevensteps.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c60f7934",
+   "id": "51b1b00b",
    "metadata": {},
    "source": [
+    "## 1) Work an Instance Yourself\n",
     "Step One is to work through one instance of the problem manually. Then, think through the various actions that need to occur and the order of those actions.\n",
     "\n",
-    "One way we could work the instance ourselves is to visit https://archive.org/.  Once there, we could enter https://www.newsobserver.com/ as the URL to search in the Wayback Machine. This search produces a timeline and calendar from which we can select a particular page.  So we click on 2018.  Then we click on November 11th in the calendar and select one of the dates.  Success!  The page refreshes with this URL: https://web.archive.org/web/20181111065826/https://www.newsobserver.com/\n",
-    "\n",
+    "One way we could work the instance ourselves is to visit https://archive.org/.  Once there, we could enter https://www.newsobserver.com/ as the URL to search in the Wayback Machine. This search produces a timeline and calendar from which we can select a particular page.  So we click on 2018.  Then we click on November 11th in the calendar and select one of the dates.  Success!  The page refreshes with this URL: https://web.archive.org/web/20181111065826/https://www.newsobserver.com/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c986f159",
+   "metadata": {},
+   "source": [
+    "## 2) Write Down Exactly What You Just Did\n",
     "Step Two is to write these steps down using \"pseudocode\" - an informal, natural language (i.e., English, Chinese, etc.) description of how the program will work. Do not worry if you are unsure how this works yet - the course has plenty of examples.\n",
     "\n",
     "<pre>\n",
@@ -38,8 +46,15 @@
     "5. Wait for the browser to respond with the archived page\n",
     "</pre>\n",
     "\n",
-    "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer cannot infer actions that our mind implicitly places into steps.  For example, in the above steps, how do I visit that website (open a browser window and enter the URL into the address/search bar). Many computer programming books like to use examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed.\n",
-    "\n",
+    "As you write these steps down, make sure you explicitly state everything.  Are there implicit steps/instructions missing? A computer cannot infer actions that our mind implicitly places into steps.  For example, in the above steps, how do I visit that website (open a browser window and enter the URL into the address/search bar). Many computer programming books like to use examples of recipes or knitting patterns to demonstrate the sequences of steps to be followed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c60f7934",
+   "metadata": {},
+   "source": [
+    "## 3) Generalize your Steps\n",
     "Step Three involves generalizing our steps.  Our initial solution works for a specific site and date but requires manual intervention.  We need to search for ways to access the data programmatically. Often, sites provide an [application programming interface (API)](https://en.wikipedia.org/wiki/API#Web_APIs) to access data. Performing a web search on \"Wayback machine API\" leads to this page: https://archive.org/help/wayback_api.php. In reading this page, we see that the Wayback Machine has an API endpoint with URLs that follows this example: https://archive.org/wayback/available?url=example.com&timestamp=20060101\n",
     "\n",
     "In other situations, you will need to research the problem domain to understand of how something functions and how you can automate that process."
@@ -67,11 +82,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be97dc85",
    "metadata": {},
    "source": [
+    "## 4) Test your Steps\n",
     "In Step Four, we then manually perform the steps to ensure we have a correct, working algorithm. We also need to test these steps by varying the inputs to see how our algorithm reacts.  This example is relatively straightforward, but in more complex situations, we will want to have at least some assurance that our approach is sound. Still, what happens if we enter an empty URL or date?  What if the URL does not exist in the Wayback Machine?  What happens if the date is in the wrong format? How does the program behave if our network connection is down?\n",
     "\n",
     "For all but the most straightforward situations, it is impossible to determine how many test cases are required: tests can demonstrate that defects exist, but they cannot prove that no defects exist.  Such proof requires formal verification using models and logical reasoning.  Hardware manufacturers are probably the leading users of formal verification in industry, but widespread use among software developers is practically nonexistent. As we discuss testing in later notebooks,  we will look at different ways to quantify the appropriate amount of testing required. \n",
@@ -99,11 +114,31 @@
    "id": "36af5794",
    "metadata": {},
    "source": [
+    "## 5-7) Convert to Code\n",
     "In Step 5, we convert the pseudocode into the code of our target language. \n",
     "\n",
     "In Step 6, we test the program to see if it works.  If all of our tests pass, we are complete. However, if we find issues, we need to debug our program (Step 7) to discover those issues, which we will correct by circling back to Step 5.\n",
     "\n",
     "As you increase your coding skills, much of this process will become second nature, and you can minimize/combine steps. However, you should always spend an appropriate amount of time planning out your solution. This can just be a few scribbles or notes for more straightforward problems.  For more complex problems and large systems, you will spend a substantial amount of time researching the best approach and then documenting that approach."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb0e767",
+   "metadata": {},
+   "source": [
+    "## IPO Charts\n",
+    "One way to document our algorithms is to an IPO Chart.  The acronym stands for input, processing, and output of an algorithm.  These elements can either form  section headers within a document or columns within a table:\n",
+    "\n",
+    "<table style='border: 1px solid;'>\n",
+    "    <tr><td colspan=3 style='border: 1px solid; text-align: left; background-color: #deefff;'><b>Algorithm Name</b></td></tr>\n",
+    "    <tr><td style='border: 1px solid; text-align: left;'>Input</td>\n",
+    "        <td style='border: 1px solid; text-align: left;'>Processing</td>\n",
+    "        <td style='border: 1px solid; text-align: left;'>Output</td></tr>\n",
+    "    <tr><td style='border: 1px solid; text-align: left; background-color: #fff;'>List inputs<br>List other known values</td>\n",
+    "        <td style='border: 1px solid; text-align: left; background-color: #fff;'>Processing steps (pseudocode) in order</td>\n",
+    "        <td style='border: 1px solid; text-align: left; background-color: #fff;'>Output/results of the processing<br>(including any messages/formatting required)</td></tr> \n",
+    "</table>"
    ]
   },
   {
@@ -117,7 +152,7 @@
     "- repetitions/loops of steps\n",
     "- decisions as to which series of steps to execute.\n",
     "\n",
-    "As we document our algorithms, the product should be in this format:\n",
+    "As we document our algorithms, we should include the following elements:\n",
     "```\n",
     "Algorithm Name\n",
     "Inputs\n",
@@ -125,7 +160,7 @@
     "Pseudocode (description of the steps to solve the problem)\n",
     "```\n",
     "\n",
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/prob_algo_prog.png?raw=true)"
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/prob_algo_prog.png)"
    ]
   },
   {
