--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -10,7 +10,7 @@
     "# Functions\n",
     "Most of the Python code you have seen and written in these notebooks has been small fragments. In some cases, these fragments can produce interesting and useful results, such as computing compound interest. However, it does not make sense to copy and paste these fragments into other programs constantly. Fortunately, Python provides a mechanism to organize these code blocks into a cohesive unit - the function.  These notebooks have used many built-in Python functions (`int`, `float`, `print`, `input`, `type`, `help`, `dir`); now, we will develop custom functions in this notebook.\n",
     "\n",
-    "Functions are named reusable code blocks.  They can take any number of parameters to send data into the function.  Functions can then return any number of results to the calling block.\n",
+    "Functions are named reusable code blocks.  They can take any number of parameters to send data into the function.  Functions can then return any number of results to the calling block.  Functions exist to perform a specific task within the construct of a larger program.\n",
     "\n",
     "As you use functions within your programs, two fundamental concepts exist:\n",
     "1. Defining (declaring) the function.  This provides the function's definition: the name, parameters, and functionality.  In many other programming languages, you need to state the functionʼs return type and parameter types explicitly.\n",
@@ -63,6 +63,8 @@
    "id": "ccc9f09e",
    "metadata": {},
    "source": [
+    "The first line of a function is called the _function header_, which specficies the name of the name of the function and any parameters to to the function.  The _function header_ starts with the keyword `def` and ends with the colon.  The portion following is the header is known as the _block_, which is the set of statements executed when the function is called.\n",
+    "\n",
     "If a function lists one or more parameters in its definition, you must pass the required number of corresponding arguments. Not passing a required argument causes a \"TypeError\"."
    ]
   },
@@ -312,7 +314,7 @@
    "metadata": {},
    "source": [
     "We can represent the logic in the above method as a decision tree:\n",
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/playgolf.png?raw=true)\n",
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/playgolf.png)\n",
     "\n",
     "By counting the number of leaf nodes (those with an oval / no children),  we get the number of different paths. This number is the minimum number of test cases needed to test the function.\n",
     "\n",
@@ -333,6 +335,32 @@
    "metadata": {},
    "source": [
     "Finally, Python has two capabilities to handle situations where the number of parameters is unknown.  A `*` can be used to gather requirements into a list, while `**` can be used to collect pairs of arguments into a dictionary. We will explore both of these possibilities in later notebooks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fd47bd6",
+   "metadata": {},
+   "source": [
+    "## Local Variables\n",
+    "We've seen how parameters function similarly to variables in the previous code examples.  In addition to using those parameters, we can also define new variables within functions.  A variable defined within a function is _local variable_ and can only be accessed(used) within that function.  Other functions may define local variables with the same name, but those variables are unique to the enclosing function.  Further, once a function returns a local variable can no longer be accessed.\n",
+    "\n",
+    "In this example, we define a function to square a particular number.  In that function, we create a local variable `result` to temporary store the computation. The main code then calls `square` and a local variable `result` is is initialized with the result of 5\\*5 (25).  The function then returns the result.  The main code then prints out the return value from square. In the last line, we demonstrate the error that occurs when we try to access `result`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68205da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(a):\n",
+    "    result = a * a\n",
+    "    return result\n",
+    "\n",
+    "print(\"Square of 5:\",square(5))\n",
+    "print(result)      # raises a NameError as result is not visible outside of the function square"
    ]
   },
   {
@@ -453,7 +481,7 @@
     "4. Local - The interpreter creates this namespace when a function is called. When the function exists, the interpreter destroys the corresponding namespace.\n",
     "\n",
     "\n",
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/namespace.png?raw=true)\n",
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/namespace.png)\n",
     "\n",
     "\n",
     "The scope of a name is the region of the program in which it is valid.\n",
@@ -678,6 +706,186 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e786a0cd",
+   "metadata": {},
+   "source": [
+    "## Case Study: Mortgage Affordability Calculator\n",
+    "Suppose as part of building a comprehension personal finance site, you were asked to create a mortgage affordability calculator. The goal of this calculator is to compute the maximum value an individual has to purchase a home.  We'll use the following conditions:\n",
+    "- Borrowers may only use up 28% of there gross income for housing payments\n",
+    "- The default annual percentage rate is 3%.  However, this rate is only available to borrows with a perfect credit score of 850.  For borrowers who have less than perfect score, they pay an additional basis point (0.01%) for each point their score is under 850 (provided their credit score is greater than or equal to 700). For borrowers, who have a credit score between 600 and 699, they pay 2 basis points (0.02%) for each point they are under 850.  Borrow who have a credit score between 500 and 599, pay 3 basis points (0.03%) for each point they are under 850. Borrowers with a credit score less than 500 and ineligible for mortgage.\n",
+    "- The housing payment includes homeowners insurance and property tax.  Homeowners insurance can be assumed to be $\\$1,000$ and the property tax $\\$5,000$ (both annually).\n",
+    "- Homeowners can provide a down payment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "709ceef9",
+   "metadata": {},
+   "source": [
+    "As you look at those conditions, you should see that we need these input values: annual gross income, credit score, down payment.\n",
+    "\n",
+    "Our output is the maximum home purchase price."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcdd7118",
+   "metadata": {},
+   "source": [
+    "Programmers often apply a design approach make to decompose a large task into smaller, more easily performed tasks. This approach also supports testing and reusability. As we look at this problem, we have a number of different tasks:\n",
+    "- input annual gross income\n",
+    "- input credit score\n",
+    "- input down payment\n",
+    "- determine loan eligibility\n",
+    "- determine interest \n",
+    "- compute initial loan (principal)\n",
+    "- output maximum home purchase price\n",
+    "\n",
+    "Below shows how we can organize this information into an IPO chart:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b388c338",
+   "metadata": {},
+   "source": [
+    "<table style='border: 1px solid;'>\n",
+    "    <tr><td colspan=3 style='border: 1px solid; text-align: left; background-color: #deefff;'><b>Mortgage Affordability: Maximum Home Price</b></td></tr>\n",
+    "    <tr><td style='border: 1px solid; text-align: left;'>Input</td>\n",
+    "        <td style='border: 1px solid; text-align: left;'>Processing</td>\n",
+    "        <td style='border: 1px solid; text-align: left;'>Output</td></tr>\n",
+    "    <tr><td style='border: 1px solid; text-align: left; background-color: #fff; vertical-align: top;'>annual gross income<br>credit score<br>down payment</td>\n",
+    "        <td style='border: 1px solid; text-align: left; background-color: #fff; vertical-align: top;'><ul>\n",
+    "            <li>input annual gross income\n",
+    "<li>input credit score\n",
+    "<li>input down payment\n",
+    "<li>determine loan eligibility\n",
+    "<li>determine interest \n",
+    "<li>compute max payment\n",
+    "<li>compute initial loan (principal)\n",
+    "<li>comput maximum home price\n",
+    "            <li>output maximum home purchase price</ul></td>\n",
+    "        <td style='border: 1px solid; text-align: left; background-color: #fff; vertical-align: top;'>maximum home purchase price</td></tr> \n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c19bf14e",
+   "metadata": {},
+   "source": [
+    "Now that we've formed an initial design for this process, we begin to look at how we could implement this into code.  One way is simple to put this into a single block of code.  However, this way, while simplistic and straightforward, has a number of issues. First, testing the code becomes increasing more difficult versus smaller, more singular focused code blocks. Making logic changes such as taking into account varying homeowners insurance takes is more difficult as it is harder to determine the impacts of changes.  Additional coding the entire process as a single unit makes reusing any portion of the process more difficult - we would need to copy and paste code, which leads to maintainability issues when changes have to be made in the future.\n",
+    "\n",
+    "The following functions show the individual functions that we can create for each of the processing steps.  Ideally, each of the input functions should have additional logic to validate user input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e30832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_annual_gross_income(): \n",
+    "    return int(input(\"Enter your annual gross income:\"))\n",
+    "\n",
+    "def input_credit_score():\n",
+    "    return int(input(\"Enter your credit score (0-850)\"))\n",
+    "\n",
+    "def input_down_payment():\n",
+    "    return int(input(\"Enter the amount of money you have available for a down payment:\"))\n",
+    "\n",
+    "def is_eligible_for_loan(credit_score):\n",
+    "    return credit_score >= 500\n",
+    "\n",
+    "def compute_annual_percentage_rate(credit_score, base_apr):\n",
+    "    # should check that the credit score is between 500 and 850\n",
+    "    if credit_score >= 700:\n",
+    "        return (850 - credit_score) * 0.0001 + base_apr\n",
+    "    elif credit_score >= 600:\n",
+    "        return (850 - credit_score) * 0.0002 + base_apr\n",
+    "    else:\n",
+    "        return (850 - credit_score) * 0.0003 + base_apr\n",
+    "\n",
+    "def compute_max_payment(annual_gross_income):\n",
+    "    result = annual_gross_income * .28 / 12  # max monthly payment is 28% of income\n",
+    "    result = result - 1000/12                # substract homeowners insurance\n",
+    "    result = result - 5000/12                # substract property tax\n",
+    "    return result\n",
+    "\n",
+    "def compute_principal(payment, terms_per_year, annual_interest_rate, years):\n",
+    "    result = payment * (1- (1 + annual_interest_rate/terms_per_year)**(-1 * years * terms_per_year))/ ( annual_interest_rate/terms_per_year)\n",
+    "    return result\n",
+    "\n",
+    "def compute_max_home_price(principal, down_payment):\n",
+    "    return principal + down_payment\n",
+    "\n",
+    "def output_max_home_purchase(amount,apr):\n",
+    "    print(\"Congratulations, you can afford a house worth $\", amount, \"with a\", apr*100,\"% loan\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4b0176",
+   "metadata": {},
+   "source": [
+    "Now, we create a `main` function to tie all of these together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b410a4b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    base_apr = 0.03\n",
+    "    agi = input_annual_gross_income()\n",
+    "    credit_score = input_credit_score()\n",
+    "    down_payment = input_down_payment()\n",
+    "    if not is_eligible_for_loan(credit_score):\n",
+    "        print(\"Your credit score is too low to qualify for a mortgage\")\n",
+    "        return\n",
+    "    apr = compute_annual_percentage_rate(credit_score, base_apr)\n",
+    "    max_payment = comput_max_payment(agi)\n",
+    "    if (max_payment <= 0):\n",
+    "        if agi < 6000:\n",
+    "            print(\"You do not make enough to pay homeowners insurance and property taxes\")\n",
+    "            return\n",
+    "        max_payment = 0\n",
+    "    loan_principal = compute_principal(max_payment,12, apr, 30)\n",
+    "    max_home_price = compute_max_home_price(loan_principal, down_payment)\n",
+    "    output_max_home_purchase(max_home_price,apr) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b720d7e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd00c556",
+   "metadata": {},
+   "source": [
+    "Formula for the present value (initial principal of a loan):\n",
+    "$P_{0}=\\frac{d\\left(1-\\left(1+\\frac{r}{k}\\right)^{-Nk}\\right)}{\\left(\\frac{r}{k}\\right)}$\n",
+    "where\n",
+    "- $P_0$ is the amount of the loan\n",
+    "- $d$ loan payment \n",
+    "- $r$ annual interest rate (as a decimal)\n",
+    "- $k$ number of compounding periods\n",
+    "- $N$ length of the loan in years"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7670c15d",
    "metadata": {},
    "source": [
@@ -719,14 +927,6 @@
     "## References\n",
     "[1] Alfred V. Aho, Ravi Sethi, and Jeffrey D. Ullman. 1986. _Compilers: principles, techniques, and tools_. Addison-Wesley Longman Publishing Co., Inc., USA."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc559e0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
