--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -75,8 +75,8 @@
    "id": "d9ae1453",
    "metadata": {},
    "source": [
-    "To format the values placed into the strings, you will need to apply special formatting codes.  These codes follow this syntax: `{:[fill][alignment][sign][minwidth][.][maxchars]type}`\n",
-    "    \n",
+    "To format the values placed into the strings, you will need to apply special formatting codes.  These codes follow this syntax: `{[name]:[fill][alignment][sign][minwidth][group][.][maxchars]type}`\n",
+    "- An optional name that can either specify the position order or a named argument. \n",
     "- An initial colon (':').\n",
     "- An optional fill character (default ' ') to pad the value string if it is shorter than minwidth.\n",
     "- An optional alignment character:\n",
@@ -85,6 +85,7 @@
     "  - '^' center\n",
     "- An optional sign for numbers. If `+` is specified, a plus symbol will be added to positive numbers.  Negative numbers always have a minus sign.\n",
     "- An optional minwidth. \n",
+    "- An optional group that can contain either a `,` or an `_` to separate thousands for numbers\n",
     "- An optional period ('.') to separate minwidth and maxchars if both values are defined.  If only one is defined, maxchars is assumed.\n",
     "- An optional maxchars.  If this is a float type, then this specifies the precision.\n",
     "- the type, which values are the same as the old style\n",
@@ -140,10 +141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd441095",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456789012345678901234567890\n",
+      "64.987120\n",
+      "           64.987120\n",
+      "          +64.987120\n",
+      "0000000000064.987120\n",
+      "         64.98712000\n",
+      "               64.99\n",
+      "64.987120           \n"
+     ]
+    }
+   ],
    "source": [
     "gain = 64.98712\n",
     "print(\"123456789012345678901234567890\")\n",
