--- a/IntroductionToPython/20-Testing.ipynb
+++ b/IntroductionToPython/20-Testing.ipynb
@@ -2,15 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8a91051",
+   "id": "5165727b",
    "metadata": {},
    "source": [
     "# Testing\n",
     "\n",
     "We perform testing to increase confidence that our programs work correctly and that those programs meet our customer's expectations. We call this type of testing functional testing as it ensures that the code functions correctly. While it sounds trite, one cannot overstate the importance of software testing. Software and computer systems permeate our daily lives; the correct functionality of those systems is paramount to our safety and well-being. Unless you are reading these words from a dead tree off the grid somewhere, you are either working with a computer system or benefiting from a product (electricity) controlled by a computer system. Not only can software defects waste time as we work through the issues, but those defects can lead to monetary loss (both direct and indirect) and possibly death.  \n",
     "\n",
-    "Testing directly improves product quality, leading to higher customer satisfaction with systems. For example, imagine using a computer that crashes regularly. How long would you continue to use that system? Testing also decreases product development costs, as finding and fixing defects sooner to when they first appear in the system costs less money to fix.\n",
-    "\n",
+    "Testing directly improves product quality, leading to higher customer satisfaction with systems. For example, imagine using a computer that crashes regularly. How long would you continue to use that system? Testing also decreases product development costs, as finding and fixing defects sooner to when they first appear in the system costs less money to fix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "669a33ab",
+   "metadata": {},
+   "source": [
     "Yes, you can initially get away with manually testing your software as you write code. (In some ways, this is necessary - build a little, test that those parts work, and build some more. Rinse, Lather, Repeat.). However, eventually, you will have significant maintainability issues. As you make changes, how do you ensure those changes do not break something?\n",
     "\n",
     "Before the early 2000s, most software and system testing was a manual process. Individuals wrote test scripts that others manually followed. Some developers built unit test cases but then executed those test cases manually. Since then, testing has become predominantly automated (although not universally). \n",
@@ -24,8 +30,24 @@
     "6. Oh ...  by the way, the automated grading of your program submissions - that's all unit tests.\n",
     "\n",
     "This notebook focuses on verification of the code we have been developing - primarily this\n",
-    "involves unit testing of the code we write. Generally speaking, unit tests check that the software produces the correct output based on a specific input. We compare actual and expected results to determine if an error occurred. We consider a \"unit\" to be any portion of code testable in isolation. We can call functions and execute them, so functions are units. However, we cannot call specific lines within a function, so they are smaller than a unit. As we examine classes shortly, we can test many of the class components in isolation and, thus, treat classes as units for testing.\n",
-    "\n",
+    "involves unit testing of the code we write. Generally speaking, unit tests check that the software produces the correct output based on a specific input. We compare actual and expected results to determine if an error occurred. We consider a \"unit\" to be any portion of code testable in isolation. We can call functions and execute them, so functions are units. However, we cannot call specific lines within a function, so they are smaller than a unit. As we examine classes shortly, we can test many of the class components in isolation and, thus, treat classes as units for testing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74fb7d87",
+   "metadata": {},
+   "source": [
+    "Two other common levels for functional testing:\n",
+    "- _system testing_ examines the behavior of an entire system. This includes external interfaces to other systems as well as the operating environment (e.g., operating system) in which the system resides.\n",
+    "- _integration testing_ verifies interactions among software components - how do these units of code work together?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a91051",
+   "metadata": {},
+   "source": [
     "The primary structure of functional tests is relatively consistent. As these tests check that the system produces the correct output for a given input, functions tests following this outline:\n",
     "1. Define inputs\n",
     "2. Identify the expected output\n",
@@ -151,6 +173,16 @@
     "`python -m unittest discover`\n",
     "\n",
     "Following the test outline, we will write some test cases for the `compute_bond_yield()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e38f496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unittest"
    ]
   },
   {
@@ -473,7 +505,7 @@
    "id": "08d1cd33",
    "metadata": {},
    "source": [
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/calculate_price_label.png?raw=true)"
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/calculate_price_label.png)"
    ]
   },
   {
@@ -640,6 +672,259 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba572743",
+   "metadata": {},
+   "source": [
+    "## Case Study: Revisiting the Mortgage Affordability\n",
+    "In this section we revisit Mortgage Affordability Calculation from the Functions notebook. Our goal here is two-fold:\n",
+    "1. Making the code more robust through error handling and input validation\n",
+    "2. Throughly perform unit testing on the code\n",
+    "\n",
+    "Below is the code updated to include error handling code and input validation. The code has been refactored(improved) to make testing easier. The input validation has been separated from receiving input from the user. This separation makes testing the validation feasible.  The separation also allows the validation logic to be reused elsewhere. We have also encapsulated the processing code to return the output rather than directly printing the output. Again, this makes this portion easier to test.  You will also notice that we have not tested `input()` and `print()` - as these are built-in Python functions, we assume that they work appropriately. Such assumptions may not hold true universally. In later notebooks, we will present the concept of \"mocking\" that allows validating results from built-in functions and externally developed code. You should also pay attention to how exceptions were tested and handled."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a93a60af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_annual_gross_income(): \n",
+    "    while True:\n",
+    "        try:\n",
+    "            user_value = input(\"Enter your annual gross income:\")\n",
+    "            return validate_positive_integer(user_value)\n",
+    "        except ValueError as ve:\n",
+    "            print(ve)\n",
+    "            \n",
+    "\n",
+    "def validate_positive_integer(test_value):\n",
+    "    try:\n",
+    "        result = int(test_value)\n",
+    "        if result > 0:\n",
+    "            return result\n",
+    "        else:\n",
+    "            raise ValueError()   # we replace this value error with the one raised in the except clause\n",
+    "    except ValueError:\n",
+    "        raise ValueError(\"You must enter an integer greater than zero. Do not use any commas or other separating characters.\")\n",
+    "    \n",
+    "def input_credit_score():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            user_value = input(\"Enter your credit score (0-850):\")\n",
+    "            return validate_integer_range(user_value,0,850)\n",
+    "        except ValueError as ve:\n",
+    "            print(ve)\n",
+    "\n",
+    "\n",
+    "def validate_integer_range(test_value,start_value,end_value):\n",
+    "    if end_value < start_value:\n",
+    "        raise RuntimeError(\"range specified in wrong order\")\n",
+    "    try:\n",
+    "        result = int(test_value)\n",
+    "        if start_value <= result <= end_value:\n",
+    "            return result\n",
+    "        else:\n",
+    "            raise ValueError()     # replaced in except clause, which catches this one.\n",
+    "    except ValueError:\n",
+    "        raise ValueError(\"You must enter an integer between {:d} and {:d}. \" \\\n",
+    "                         \"Do not use any commas or other separating characters.\".format(start_value,end_value))\n",
+    "\n",
+    "\n",
+    "def input_down_payment():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            user_value = input(\"Enter the amount of money you have available for a down payment:\")\n",
+    "            return validate_positive_integer(user_value)\n",
+    "        except ValueError as ve:\n",
+    "            print(ve)\n",
+    "\n",
+    "\n",
+    "def is_eligible_for_loan(credit_score):\n",
+    "    return credit_score >= 500\n",
+    "\n",
+    "def compute_annual_percentage_rate(credit_score, base_apr):\n",
+    "    # should check that the credit score is between 500 and 850\n",
+    "    if credit_score >= 700:\n",
+    "        return (850 - credit_score) * 0.0001 + base_apr\n",
+    "    elif credit_score >= 600:\n",
+    "        return (850 - credit_score) * 0.0002 + base_apr\n",
+    "    else:\n",
+    "        return (850 - credit_score) * 0.0003 + base_apr\n",
+    "\n",
+    "def compute_max_payment(annual_gross_income):\n",
+    "    result = annual_gross_income * .28 / 12  # max monthly payment is 28% of income\n",
+    "    result = result - 1000/12                # substract homeowners insurance\n",
+    "    result = result - 5000/12                # substract property tax\n",
+    "    return result\n",
+    "\n",
+    "def compute_principal(payment, terms_per_year, annual_interest_rate, years):\n",
+    "    result = payment * (1- (1 + annual_interest_rate/terms_per_year)**(-1 * years * terms_per_year))/ ( annual_interest_rate/terms_per_year)\n",
+    "    return result\n",
+    "\n",
+    "def compute_max_home_price(principal, down_payment):\n",
+    "    return principal + down_payment\n",
+    "\n",
+    "def create_message_max_home_purchase(amount,apr):\n",
+    "    return \"Congratulations, you can afford a house worth ${:,.2f} with a {:.2f}% loan.\".format(amount,apr*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2fde9d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    agi = input_annual_gross_income()\n",
+    "    credit_score = input_credit_score()\n",
+    "    down_payment = input_down_payment()\n",
+    "    output = process(agi,credit_score,down_payment)\n",
+    "    print(output)\n",
+    "\n",
+    "def process(agi,credit_score,down_payment):\n",
+    "    base_apr = 0.03\n",
+    "\n",
+    "    if not is_eligible_for_loan(credit_score):\n",
+    "        return \"Your credit score is too low to qualify for a mortgage.\";\n",
+    "    apr = compute_annual_percentage_rate(credit_score, base_apr)\n",
+    "    max_payment = compute_max_payment(agi)\n",
+    "    if (max_payment <= 0):\n",
+    "        if agi < 6000:\n",
+    "            return \"You do not make enough to pay homeowners insurance and property taxes.\"\n",
+    "        else:\n",
+    "            return \"You do not make enough money to qualify for a loan.\"\n",
+    "    loan_principal = compute_principal(max_payment,12, apr, 30)\n",
+    "    max_home_price = compute_max_home_price(loan_principal, down_payment)\n",
+    "    return create_message_max_home_purchase(max_home_price,apr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7943732d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestAffordabilityInputs(unittest.TestCase):\n",
+    "    def test_validate_positive_integer(self):\n",
+    "        error_message = \"You must enter an integer greater than zero. Do not use any commas or other separating characters.\"\n",
+    "\n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_positive_integer(\"asd\")\n",
+    "        self.assertTrue(type(context.exception) == ValueError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(error_message,context.exception.args[0])\n",
+    "        \n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_positive_integer(\"0\")     \n",
+    "        self.assertTrue(type(context.exception) == ValueError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(error_message,context.exception.args[0])\n",
+    "        \n",
+    "        self.assertEqual(validate_positive_integer(1),1)\n",
+    "        self.assertEqual(validate_positive_integer(\"100000\"),100000)\n",
+    "\n",
+    "    def test_validate_integer_range(self):\n",
+    "        error_message = \"You must enter an integer between 0 and 850. Do not use any commas or other separating characters.\"\n",
+    "\n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_integer_range(\"asd\",0,850)\n",
+    "        self.assertTrue(type(context.exception) == ValueError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(error_message,context.exception.args[0])\n",
+    "        \n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_integer_range(\"-1\",0,850)\n",
+    "        self.assertTrue(type(context.exception) == ValueError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(error_message,context.exception.args[0])\n",
+    "\n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_integer_range(\"851\",0,850)\n",
+    "        self.assertTrue(type(context.exception) == ValueError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(error_message,context.exception.args[0])\n",
+    "        \n",
+    "        with self.assertRaises(Exception) as context:\n",
+    "            validate_integer_range(\"425\",850,0)\n",
+    "        self.assertTrue(type(context.exception) == RuntimeError,\"Wrong exception type raised\")\n",
+    "        self.assertEqual(\"range specified in wrong order\",context.exception.args[0])        \n",
+    "        \n",
+    "        self.assertEqual(validate_integer_range(0,0,850),0)\n",
+    "        self.assertEqual(validate_integer_range(1,0,850),1)\n",
+    "        self.assertEqual(validate_integer_range(425,0,850),425)\n",
+    "        self.assertEqual(validate_integer_range(850,0,850),850)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fca14ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestAffordabilityLogic(unittest.TestCase):\n",
+    "    def test_is_eligible_for_loan(self):\n",
+    "        self.assertEqual(is_eligible_for_loan(499),False)\n",
+    "        self.assertEqual(is_eligible_for_loan(500),True)\n",
+    "        self.assertEqual(is_eligible_for_loan(501),True)\n",
+    "        \n",
+    "    def test_compute_annual_percentage_rate(self):\n",
+    "        base_rate = 0.03\n",
+    "        self.assertEqual(compute_annual_percentage_rate(850,base_rate),base_rate)\n",
+    "        self.assertEqual(compute_annual_percentage_rate(700,base_rate),base_rate+0.0150)\n",
+    "        self.assertEqual(compute_annual_percentage_rate(699,base_rate),base_rate+0.0302)\n",
+    "        self.assertEqual(compute_annual_percentage_rate(600,base_rate),base_rate+0.0500)\n",
+    "        self.assertAlmostEqual(compute_annual_percentage_rate(599,base_rate),base_rate+0.0753,4)\n",
+    "        self.assertAlmostEqual(compute_annual_percentage_rate(500,base_rate),base_rate+0.105,4)\n",
+    "        \n",
+    "    def test_compute_max_payment(self):\n",
+    "        self.assertEqual(compute_max_payment(0),-500)\n",
+    "        self.assertAlmostEqual(compute_max_payment(21428),-0.013,3)\n",
+    "        self.assertAlmostEqual(compute_max_payment(21429),0.01,2)        \n",
+    "        self.assertAlmostEqual(compute_max_payment(100000),1833.33,2)\n",
+    "        \n",
+    "    def test_compute_principal(self):\n",
+    "        self.assertAlmostEqual(compute_principal(1000,12,0.03,30),237189.38,2)  # manual calculate PV in MS excel\n",
+    "    \n",
+    "    def test_max_home_price(self):\n",
+    "        self.assertEqual(compute_max_home_price(1000,1000),2000)\n",
+    "        \n",
+    "    def test_create_message_max(self):\n",
+    "        message = \"Congratulations, you can afford a house worth $461,828.79 with a 4.50% loan.\"\n",
+    "        self.assertEqual(create_message_max_home_purchase(461828.794444,0.045),message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f40af7e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestAffordabilityProcess(unittest.TestCase):\n",
+    "    def test_credit_score_ineligible(self):\n",
+    "        self.assertEqual(process(100000,499,100000),\"Your credit score is too low to qualify for a mortgage.\")\n",
+    "    def test_income_to_low_for_ins_tax(self):\n",
+    "        self.assertEqual(process(5999,700,100000),\"You do not make enough to pay homeowners insurance and property taxes.\")\n",
+    "    def test_income_to_low_for_loan(self):\n",
+    "        self.assertEqual(process(6000,700,10000),\"You do not make enough money to qualify for a loan.\")\n",
+    "    def test_process_good(self):\n",
+    "        self.assertEqual(process(100000,700,100000),\"Congratulations, you can afford a house worth $461,828.79 with a 4.50% loan.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b7be38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unittest.main(argv=['unittest','TestAffordabilityInputs','TestAffordabilityLogic','TestAffordabilityProcess'], \n",
+    "              verbosity=2, exit=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "23ad39ce",
    "metadata": {},
    "source": [
@@ -684,7 +969,7 @@
    "id": "946c005f",
    "metadata": {},
    "source": [
-    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/median.png?raw=true)"
+    "![](https://github.com/slankas/DataScienceNotebooks/blob/main/IntroductionToPython/images/images/median.png)"
    ]
   },
   {
